<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/relative_container"
    tools:context=".presentacion.Fragments.ProfileFragment">

    <me.unmsm.alejandriapp.presentacion.widget.MediumText
        android:id="@+id/titlePerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/perfil_title"
        android:layout_below="@+id/tablayout"
        android:paddingTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="20dp"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/titlePerfil"
        android:src="@drawable/user" />

    <LinearLayout
        android:id="@+id/linear_name"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_below="@id/image_profile"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp">
        <ImageView
            android:id="@+id/image_name"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/image_name"
             />
        <me.unmsm.alejandriapp.presentacion.widget.LigthText
            android:id="@+id/name"
            android:layout_width="300dp"
            android:layout_height="25dp"
            android:text="@string/perfil_name"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
             />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_last"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_below="@id/linear_name"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp">
        <ImageView
            android:id="@+id/image_lastname"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/image_lastname"
            />
        <me.unmsm.alejandriapp.presentacion.widget.LigthText
            android:id="@+id/last_name"
            android:layout_width="300dp"
            android:layout_height="25dp"
            android:text="@string/perfil_lastname"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
        />
    </LinearLayout>
    <!--<LinearLayout
        android:id="@+id/linear_facultad"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_below="@id/linear_last"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp">
        <ImageView
            android:id="@+id/image_facultad"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/image_facultad"
            />
        <me.unmsm.alejandriapp.presentation.widget.LigthText
            android:id="@+id/facultad"
            android:layout_width="300dp"
            android:layout_height="25dp"
            android:text="@string/perfil_facultad"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_eap"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_below="@id/linear_facultad"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp">
        <ImageView
            android:id="@+id/image_eap"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/image_eap"
            />
        <me.unmsm.alejandriapp.presentation.widget.LigthText
            android:id="@+id/eap"
            android:layout_width="300dp"
            android:layout_height="25dp"
            android:text="@string/perfil_eap"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_ciclo"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_below="@id/linear_eap"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp">
        <ImageView
            android:id="@+id/image_ciclo"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/image_semester"
            />
        <me.unmsm.alejandriapp.presentation.widget.LigthText
            android:id="@+id/ciclo"
            android:layout_width="300dp"
            android:layout_height="25dp"
            android:text="@string/perfil_ciclo"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>-->

    <LinearLayout
        android:id="@+id/linear_mail"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_below="@id/linear_last"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp">
        <ImageView
            android:id="@+id/image_mail"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/image_email"
            />
        <me.unmsm.alejandriapp.presentacion.widget.LigthText
            android:id="@+id/text_mail"
            android:layout_width="300dp"
            android:layout_height="25dp"
            android:text="@string/perfil_mail"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_dof"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_below="@id/linear_mail"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp">
        <ImageView
            android:id="@+id/image_dof"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/image_dof"
            />
        <me.unmsm.alejandriapp.presentacion.widget.LigthText
            android:id="@+id/text_dof"
            android:layout_width="300dp"
            android:layout_height="25dp"
            android:text="@string/perfil_dof"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_eap"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_below="@id/linear_dof"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp">
        <ImageView
            android:id="@+id/image_eap"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/image_facultad"
            />
        <me.unmsm.alejandriapp.presentacion.widget.LigthText
            android:id="@+id/eap"
            android:layout_width="300dp"
            android:layout_height="25dp"
            android:text="@string/perfil_eap"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>

        <Button
            android:id="@+id/text_logout"
            android:layout_width="300dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="Cerrar sesión"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginTop="25dp"
            android:background="@drawable/custom_button_logout"
            android:layout_below="@+id/linear_eap"
            android:layout_centerHorizontal="true" />


</RelativeLayout>
